# 02_SUB_RoboticArm

./: .gitignore  MJDATA.TXT  MUJOCO_LOG.TXT  build.bash  shuomiong.txt
nmb/: CMakeLists.txt  package.xml
nmb/config/: arm_automation_state_machine.yaml  arm_controller.yaml  cartesian_ik_mapper.yaml  motor_comm.yaml  ros_domain.yaml  trajectory_bspline_jerk_planner.yaml
nmb/launch/: robot_arm_bringup.launch.py
nmb/rviz/: robot_arm.rviz
nmb/scripts/: mujoco_joint_sim_node.py
nmb/src/: arm_automation_state_machine_node.cpp  arm_controller_node.cpp  cartesian_ik_mapper_node.cpp  motor_comm_node.cpp  robot_description_switcher_node.cpp  trajectory_bspline_jerk_planner_node.cpp
nmb/usb_host_driver/: CMakeLists.txt  README.md  UsbVcpDriver.cpp  UsbVcpDriver.hpp  crc_ccitt.h
urdf/: 02_SUB_RoboticArm.csv  02_SUB_RoboticArm.urdf  02_SUB_RoboticArm.xml  02_SUB_RoboticArm_payload.urdf
usb_host_driver/: CMakeLists.txt  README.md  UsbVcpDriver.cpp  UsbVcpDriver.hpp  example_main.cpp
